# media-streamer

./: .gitignore  .project  Doxyfile  Makefile  Makefile.am  Makefile.bak  README  autogen.sh  configure  configure.ac  files  patch
android-rtp-module/: .project  AndroidManifest.xml
android-rtp-module/jni/: Android.mk  Application.mk  main.c
android-rtp-module/jni/src/: config.h  config_unix.h  main.c  main.h  transmit.h  video_capture.h  video_codec.c  video_compress.c  video_display.c
android-rtp-module/jni/src/audio/: audio.h  codec.c  codec.h  export.c  resampler.c  utils.c  utils.h
android-rtp-module/jni/src/audio/codec/: dummy_pcm.c
android-rtp-module/jni/src/audio/playback/: none.c
android-rtp-module/jni/src/compat/: inet_ntop.c  inet_ntop.h
android-rtp-module/jni/src/crypto/: random.h
android-rtp-module/jni/src/rtp/: decoders.c  pbuf.c
android-rtp-module/jni/src/utils/: list.c  resource_manager.cpp  resource_manager.h  worker.cpp
android-rtp-module/jni/src/video_capture/: net.c  net.h
android-rtp-module/jni/src/video_display/: net.h
android-rtp-module/res/values/: strings.xml
decoder/: Makefile  Makefile~  config.h  libavcodec_common.h  video_decompress.c~
decoder/test/: main.c  main.c~
decoder/utils/: resource_manager.cpp
dxt_compress/: makefile
encoder/: Makefile  lib_common.c  video_compress.c
encoder/test/: main.c
encoder/utils/: worker.cpp
encoder/video_compress/: libavcodec.c  none.c
examples/rtp-rx-decoder/: config.h  ntp.c
examples/rtp-rx-decoder/rtp/: net_udp.c  net_udp.h  rtp_callback.c
examples/rtp-rx-decoder/test/: video.c  video_codec.h
examples/rtp-rxtx/: .cproject  .project  rx_frame
examples/rtp-rxtx/compat/: inet_ntop.h
examples/rtp-rxtx/test/: main.c  tile.c  video.h  video_codec.c
io_mngr/: BasicRTSPOnlyServer.cpp  BasicRTSPOnlyServer.hh  BasicRTSPOnlySubsession.cpp  BasicRTSPOnlySubsession.hh  Makefile.am  audio_config.h  audio_data.h  audio_processor.c  audio_processor.h  c_basicRTSPOnlyServer.cpp  c_basicRTSPOnlyServer.h  c_basicRTSPOnlyServer.hh  circular_queue.c  circular_queue.h  commons.h  config.h.bak  config_unix.h  participant.c  participant.h  participants.c  participants.h  participants_list.c  participants_list.h  receiver.c  receiver.h  stream.c  stream.h  stream_list.c  stream_list.h  test.c  test_transmitter.c  transmitter.c  transmitter.h  video_config.h  video_data.c  video_data.h  video_processor.c  video_processor.h
reciever/: participants.c  participants.h  reciever.c  reciever.h  test.c  test_transmitter.c  transmitter.c  transmitter.h
rtp-transcoding-modules/: INSTALL  Makefile  Makefile.in  autom4te.cache.tar  configure  configure.ac  libtool
rtp-transcoding-modules/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
rtp-transcoding-modules/src/: config.h.in  config.h.in~  main.c  transmit.c  transmit.h  video_capture.c  video_compress.c  video_decompress.c  video_display.c
rtp-transcoding-modules/src/audio/: audio.c  audio.h  audio_capture.c  audio_playback.c  resampler.c
rtp-transcoding-modules/src/audio/codec/: dummy_pcm.c
rtp-transcoding-modules/src/rtp/: decoders.c  decoders.h  pbuf.h
rtp-transcoding-modules/src/video_display/: net.c
rtp-txrx/: .gitignore  Makefile  pdb.c  perf.c  perf.h
rtp-txrx/compat/: gettimeofday.c  inet_pton.h
rtp-txrx/crypto/: random.c
rtp-txrx/rtp/: net_udp.c  pbuf.c  pbuf.h  ptime.c  rtp.c  rtp_callback.c  rtpdec.c  rtpdec.h  rtpdec_h264.c  rtpenc.c  rtpenc.h  rtpenc_h264.c  rtpenc_h264.h
rtp-txrx/test/: main.c
src/: COPYRIGHT  Makefile.am  config.h  config.h.in  debug.c  lib_common.h  messaging.h  pdb.c  tfrc.c  tile.c  transmit.c  transmit.h  tv.c  tv.h  tv_std.c  tv_std.h  video.c  video_codec.c  video_codec.h  video_compress.h  video_data.c  video_data.h  video_data_frame.c  video_data_frame.h  video_decompress.c
src/audio/: audio.h  codec.c  codec.h  resampler.c  resampler.h  utils.c  utils.h
src/audio/codec/: dummy_pcm.c  libavcodec.c
src/compat/: drand48.c  inet_ntop.c  inet_pton.c  platform_semaphore.c  platform_semaphore.h
src/crypto/: crypt_aes.c  crypt_aes_impl.c  crypt_des.c  md5.c
src/io_mngr/: Makefile.am  participants.c  participants.h  receiver.c  transmitter.c  transmitter.h
src/rtp/: audio_decoders.c  audio_decoders.h  audio_frame2.c  audio_frame2.h  audio_rtpdec.c  audio_rtpdec.h  net_udp.c  pbuf.c  pbuf.h  rtp.c  rtp.h  rtp_callback.c  rtp_callback.h  rtpdec.c  rtpdec.h  rtpdec_h264.c  rtpdec_h264.h  rtpenc.c  rtpenc.h  rtpenc_h264.c  rtpenc_h264.h  video_frame2.c  video_frame2.h
src/utils/: resource_manager.cpp  resource_manager.cpp~  resource_manager.h  resource_manager.h~  worker.cpp~  worker.h  worker.h~
src/video_compress/: dxt_glsl.c  fastdxt.c  jpeg.c  libavcodec.c  libavcodec.h  none.c  none.h  uyvy.c
src/video_decompress/: dxt_glsl.c  jpeg.c  jpeg_to_dxt.c  libavcodec.c
tests/: 2in2out.c  HOWTO  README  audio_compression.c  audio_frame2_to_disk.c  audio_frame2_to_disk.h  audio_mix.c  audio_mulaw_only.c  audio_rec_trans.c  audio_receiver.c  audio_resample.c  audio_resample.h  audio_rtp_only.c  audio_transmitter.c  audio_ulaw_only.c  decoder.c  enc_dec.c  enc_tx.c  encoder.c  encoder.c~  mmforwarder.c  resized_resample.c  resized_resample.h  rtp.c  rtp.c~  rx_dec.c  test_rec_trans.c  test_receiver.c  test_rtsp_transmitter.c  test_transmitter.c  ug_ug.c  ug_vlc.c  video_rec_trans.c  video_receiver.c  video_rtsp_transmitter.c  video_transmitter.c  vlc_ug.c  vlc_vlc.c
transmitter/: participants.c  participants.h  receiver.c  transmitter.c  transmitter.h
